spacing fixes for mac

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ div {
 #nebula {
   position: fixed;
   width: calc(73vw);
-  height: calc(105vw);
+  height: calc(105vh);
   top: -20px;
   right: 0;
   background: rgb(181,170,170);
